# clover

./: .gitignore  .travis.yml  README.md  README.rst  deploy.sh  ecosystem.config.js  flaskapi.sh  id_rsa.enc  pyproject.toml  requirements.txt
client/: .env.development  .env.production  next.config.js  package.json  tailwind.config.js
client/components/: A_book.jsx  BasicLayout.jsx  api.jsx  footer.jsx  navi.jsx
client/components/context/: book.jsx
client/pages/: _app.js  books.js  checkouts.js  index.js  issue.js
client/pages/book/: [isbn].js
client/styles/: globals.css
clover/: __init__.py  __main__.py  app.py
clover/books/: frappeAPI.py  routes.py
clover/mongo/: driver.py  models.py
clover/records/: routes.py
clover/users/: routes.py
tests/: test_clover.py  test_users.py
