[tool.poetry]
name = "clover"
version = "0.1.0"
description = ""
authors = ["saxenabhishek <as7122000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.65.2"}
flake8 = "^3.9.2"
black = "^21.6b0"
motor = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
